[package]
name = "crudis"
version = "0.1.0"
authors = ["Gregory Meyer <me@gregjm.dev>"]
edition = "2018"

[dependencies]
bytes = "0.4"
crossbeam = "0.7"
fxhash = "0.2"
hashbrown = "0.3"
im = "13.0"
jemallocator = "0.3"
lazy_static = "1.3"
lock_api = "0.1"
nom = "4.2"
parking_lot = "0.7"
tokio = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
